# ComputeRaytracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
asset-baker/: CMakeLists.txt  asset_main.cpp
asset-lib/: CMakeLists.txt
asset-lib/include/: asset_loader.h  mesh_asset.h  texture_asset.h
asset-lib/src/: asset_loader.cpp  mesh_asset.cpp  texture_asset.cpp
assets/: cirno_low.mtl
engine/: CMakeLists.txt
engine/include/: axis_aligned_bounding_box.h  bounding_volume_hierarchy.h  camera.h  hittable.h  scene.h  scene_manager.h  shapes.h  sphere.h  vk_descriptors.h  vk_engine.h  vk_initializers.h  vk_material.h  vk_mesh.h  vk_pipeline.h  vk_textures.h  vk_types.h
engine/raytracing/: axis_aligned_bounding_box.h  bounding_volume_hierarchy.h  camera.h  hittable.h  primitives.h  scene.h
engine/src/: scene_manager.cpp  vk_descriptors.cpp  vk_engine.cpp  vk_initializers.cpp  vk_material.cpp  vk_mesh.cpp  vk_pipeline.cpp  vk_textures.cpp
include/: vk_engine.h  vk_initializers.h  vk_mesh.h  vk_textures.h  vk_types.h
libs/: CMakeLists.txt
libs/glm/glm/detail/: func_common.inl  func_matrix.inl  setup.hpp  type_mat3x3.inl  type_mat4x4.inl
libs/glm/glm/ext/: matrix_transform.hpp  quaternion_common.hpp  quaternion_geometric.hpp
libs/glm/glm/gtc/: integer.hpp  packing.inl  quaternion.inl
libs/glm/glm/gtx/: compatibility.hpp  easing.hpp  handed_coordinate_space.hpp  intersect.hpp  io.hpp  matrix_decompose.inl  pca.hpp  polar_coordinates.hpp  quaternion.hpp  vec_swizzle.hpp
raytracing/: CMakeLists.txt
raytracing/include/: axis_aligned_bounding_box.h  bounding_volume_hierarchy.h  camera.h  hittable.h  primitives.h  rt_material.h  scene.h
raytracing/src/: axis_aligned_bounding_box.cpp  bounding_volume_hierarchy.cpp  camera.cpp  scene.cpp
shaders/: colored_triangle.frag  colored_triangle.vert  compute.comp  compute.frag  compute.vert  default_lit.frag  textured_lit.frag  tri_mesh.vert  triangle.frag  triangle.vert
src/: CMakeLists.txt  main.cpp  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_textures.cpp  vk_types.h
